// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private Reducer should have a default state 1`] = `
Object {
  "showingCountModal": false,
  "showingNBTModal": false,
}
`;

exports[`Private Reducer should toggle count menu 1`] = `
Object {
  "showingCountModal": true,
  "showingNBTModal": false,
}
`;
